--- a/fkm-checkup/styles.css
+++ b/fkm-checkup/styles.css
@@ -266,3 +266,11 @@ select {
     object-fit: contain;
     background-color: white;
 }
+
+#productName {
+    font-size: 1em; /* お好みのサイズに調整してください */
+}
+
+#editScreen h2 {
+    font-size: 1em; /* お好みのサイズに調整してください */
+}
