--- a/fkm-checkup/styles.css
+++ b/fkm-checkup/styles.css
@@ -1,6 +1,6 @@
 /* カラー変数 */
 :root {
-    --main-color: #6da2df;
+    --main-color: #6ee09a;
     --color-purple: #7a6edf;
     --color-green: #6ee09a;
     --color-pink: #c06ddf;
